# matplotlib_training

./: pyproject.toml
resources/: animated.csv
src/: 10_subplots.py  3_pie_chart.py  4_bar_and_plot.py  4_bar_using_external_data.py  8_dateseries_plot.py  9_animated_plot_generator.py  animated_plot.py  barcharts_side_by_side.py  dateseries_plot.py  histogram.py  linear_plot.py  matplotlib.ipynb  matplotlib_training.py  scatter_plot.py  stackplot.py
